# experiment-umi

./: .gitignore  Cargo.toml  README.md
applications/: Cargo.toml
applications/benches/: criterion.rs  overhead.rs
applications/examples/: ready_reminder_client.rs  ready_reminder_umi_client.rs  ready_reminder_umi_server.rs  student_record_client.rs  student_record_server.rs  student_record_single.rs
applications/src/: lib.rs
applications/src/reminder/: mod.rs  ready_reminder_server.rs  ready_reminder_server_multi.rs
applications/src/umi_demo/: mod.rs  students.rs  students_single.rs
src/: endpoint.rs  lib.rs  message_serialisation.rs  registry.rs  utils.rs
src/proxy_lib/: mod.rs
umi_macros/: Cargo.toml
umi_macros/src/: lib.rs
umi_macros/umi_macros_proc/: Cargo.toml
umi_macros/umi_macros_proc/src/: lib.rs
