[package]
name = "applications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features=["html_reports"]}

[[bench]]
name = "overhead"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"

umi = {path = "../../experiment-umi"}
umi_macros = {path = "../umi_macros"}
umi_macros_proc = {path = "../umi_macros/umi_macros_proc"}
