[package]
name = "umi_macros_proc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["extra-traits", "full", "visit", "visit-mut"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"